--- a/src/components/features/posts/RequestCard.css
+++ b/src/components/features/posts/RequestCard.css
@@ -176,7 +176,7 @@
   max-width: calc(100% - 60px);
   width: calc(100% - 145px);
   z-index: 1;
-  margin: 8px 0 16px 8px;
+  margin: 8px 0 8px 8px;
   transition: transform 0.2s ease;
 }
 
